--- a/football.html
+++ b/football.html
@@ -14,6 +14,7 @@
   <li>Alabama will win the NCAA D1 championship on January 10, 2022.</li>
   <li>Ravens will not make the playoffs.</li>
   <li>49ers will make the playoffs.</li>
+	<li>Cooper Kupp will get 2,000 yards during the 2021-22 season.</li>
 </ul>
 
   </body>
