--- a/football.html
+++ b/football.html
@@ -17,5 +17,9 @@
 	<li>Cooper Kupp will get 2,000 yards during the 2021-22 season.</li>
 </ul>
 
+<br>
+Here's a picture of me in my football uniform:
+<br><br>
+<img src="pics/naftali_football.jpeg" width=250 class = "center">
   </body>
 </html>
