--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <img src="pics/naftali2.jpeg" width=250 class = "center">
   <h1><b>NAFTALI ELLIS</h1></b>
 	I am a chad from California. The guy on the right.
-	<br>My interests include football, spicy memes, and broccoli.
+	<br>My interests include football, spicy memes, and potatoes.
   <br> <br>
-    <a href="football.html">Football</a> <br> <br>
-  	<a href='videos.html' class='css-class'>Lit videos</a>
+    <a href="football">Football</a> <br> <br>
+  	Lit <a href='videos' class='css-class'>videos</a>
 		<br> <br>
-		<a href='memes.html' class='css-class'>Memes I like</a>
+		<a href='memes' class='css-class'>Photos</a> that go hard (feel free to screenshot)
     <br><br>
+
+		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">funny meme!</a> <br><br><br>
+
+
     email: <a href="mailto:nellis2024@francisparker.org">nellis2024@francisparker.org</a><br>
     instagram: <a href="https://www.instagram.com/naftalell/">@naftalell</a> <br> <br>
     languages: english, עברית, español
