--- a/videos.html
+++ b/videos.html
@@ -2,7 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width">
-	<title>Naftali Ellis</title>
+	<title>Videos</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" type="image/png" href="pics/ico.jpg">
 </head>
