--- a/football.html
+++ b/football.html
@@ -6,8 +6,9 @@
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" type="image/png" href="pics/ico.jpg">
 </head>
-<body style="font-family:garamond; max-width:500px; margin:auto; text-align:left">
-  <br> <br> <br> <br>
+<body style="font-family:Verdana; max-width:500px; margin:auto; text-align:left">
+  <br> <br> <br>
+	<a link href= "https://naftaliellis.com/" style="color:#444444; text-decoration:none"><em>Back</em></a>
   <h1><b>FOOTBALL</h1></b>
 	Here are my predictions:
 	<ul>
@@ -16,8 +17,6 @@
   <li>49ers will make the playoffs.</li>
 	<li>Cooper Kupp will get 2,000 yards during the 2021-22 season.</li>
 </ul>
-
-<br>
 Here's a picture of me in my football uniform:
 <br><br>
 <img src="pics/naftali_football.jpeg" width=250 class = "center">
