--- a/memes.html
+++ b/memes.html
@@ -9,14 +9,14 @@
 <body style="font-family:Verdana; max-width:500px; margin:auto; text-align:center">
   <br> <br> <br>
 	<a link href= "https://naftaliellis.com/" style="color:#444444; text-decoration:none"><em>Back</em></a>
-  <h1><b>LIT VIDEOS</h1></b>
-	Below are some videos that have left a profound impact on me.
-  <br> <br>
+  <h1><b>MEMES</h1></b>
+	Coming soon...
+  <!-- <br> <br>
 
 	<a link href= "https://www.youtube.com/watch?v=KdaD5K67kAE" target="_blank">Cute little orange fish dancing</a>
 	<br><br>
 	<a link href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Funny meme!</a> <br><br><br>
   <br><br>
-
+-->
 	</body>
 </html>
